# RedNeuronal

./: .gitignore  CMakeLists.txt  main.cpp  redneuronal.cpp  redneuronal.h
Data/: entrada.csv
Docs/: motivacion.odt
Models/: arqRed.txt  biasRed.txt  pesosRed.txt
